--- a/IBGEApiClient/IBGEApiClient.csproj
+++ b/IBGEApiClient/IBGEApiClient.csproj
@@ -1,17 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ManyHelpers\ManyHelpers\ManyHelpers.csproj" />
+    <ProjectReference Include="..\..\..\Tools\HelpersLibs\HelpersLib.Strings\HelpersLib.Strings.csproj" />
+    <ProjectReference Include="..\..\..\Tools\HelpersLibs\HelpersLibs.Collection\HelpersLibs.Collection.csproj" />
+    <ProjectReference Include="..\..\..\Tools\HelpersLibs\HelpersLibs.Excel\HelpersLibs.Excel.csproj" />
+    <ProjectReference Include="..\..\..\Tools\HelpersLibs\HelpersLibs.Web\HelpersLibs.Web.csproj" />
   </ItemGroup>
+
+
 
 </Project>
